--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,110 @@
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Marketplace
+Explore
+ @dodders
+ Sign out
+ Watch 1
+  Star 1
+  Fork 10 cf/react-metrics-graphics
+forked from mozilla/react-metrics-graphics
+ Code  Pull requests 0  Projects 0  Wiki Insights 
+Branch: master Find file Copy pathreact-metrics-graphics/example/src/example.less
+e33be9c  on Aug 24, 2016
+@cf cf First Commit
+1 contributor
+RawBlameHistory     
+90 lines (81 sloc)  1.89 KB
+/* 
+// Examples Stylesheet
+// -------------------
+*/
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	color: #333;
+	margin: 0;
+	padding: 0;
+
 }
 
-.top {
-  margin-top: 10px;
+a {
+	color: #08c;
+	text-decoration: none;
 }
 
-.header {
-  width: 100%;
-  background-image: url("images/clouds.png");
-  color: antiquewhite;
-  border-style: solid;
-  border-color: darkblue;
-  border-width: 1px;
-  min-height: 40px;
-  max-height: 50px;
-  padding: 5px;
-  font-size: 1.8em;
-  text-indent: 10px;
-  padding-top: 15px;
+a:hover {
+	text-decoration: underline;
 }
 
-.left {
-	width: 45%;
-    float: left;
-    text-align: right;
-    margin-right: 5%;
+.container {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 720px;
+	padding: 1em;
 }
 
-.right {
-	width: 50%;
-  float: right;
-  text-align: left;
+.footer {
+	margin-top: 50px;
+	border-top: 1px solid #eee;
+	padding: 20px 0;
+	font-size: 12px;
+	color: #999;
 }
 
-.small {
-  font-size: 0.7em;
-  color: Indigo;
+h1, h2, h3, h4, h5, h6 {
+	color: #222;
+	font-weight: 100;
+	margin: 0.5em 0;
 }
 
-.big {
-  font-size: 1.6em;
-  color: Indigo;
+label {
+	color: #999;
+	display: inline-block;
+	font-size: 0.85em;
+	font-weight: bold;
+	margin: 1em 0;
+	text-transform: uppercase;
 }
 
-.box-shadow-menu {
-  position: relative;
-  padding-left: 1.25em;
+.hint {
+	margin: 15px 0;
+	font-style: italic;
+	color: #999;
 }
-
-.box-shadow-menu:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0.25em;
-  width: 1em;
-  height: 0.15em;
-  background: white;
-  box-shadow: 
-    0 0.25em 0 0 white,
-    0 0.5em 0 0 white;
+.isimple-btn{
+	display: inline-block;
+	border:1px solid #bfbfbf;
+	color: #8c8c8c;
+	border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	-moz-border-radius: 5px 5px 5px 5px;
+	font-family: Arial;
+	width: auto;
+	height: auto;
+	font-size: 16px;
+	padding: 10px 40px;
+	box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
+	-moz-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
+	-webkit-box-shadow: inset 0 1px 0 0 #fff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2,0 2px 4px 0 #f2f2f2;
+	text-shadow: 0 1px 0 #fff;
+	background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);
+	background-color: #f2f2f2;
+	outline:none;
+}
+.isimple-btn:hover{
+	border:1px solid #8c8c8c;
+	background-color: #F9F9F9;
+}
+.isimple-btn:active{
+	border:1px solid #8c8c8c;
+	color: #8c8c8c;
+	box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
+	-moz-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
+	-webkit-box-shadow: inset 0 1px 0 0 #ffffff,inset 0 -1px 0 0 #d9d9d9,inset 0 0 0 1px #f2f2f2;
+	background-color: #F9F9F9;
 }
