--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ RawBlameHistory
 // -------------------
 */
 
+.sensor-select {
+	width: 100px;
+}
+
 body {
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: 14px;
